--- a/test/testSeq.html
+++ b/test/testSeq.html
@@ -4,7 +4,7 @@
 		<p>
 			open javascript console to see the result
 		</p>
-		<script type="text/javascript" src="../lib/flow.js"></script>
+		<script type="text/javascript" src="../gowiththeflow.js"></script>
 		<script type="text/javascript" src="testSeq.js"></script>
 	</body>
 </html>
